Fix social icons alignment and background in ipad
#2

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -388,8 +388,9 @@ dl.article-info {
 	}
 }
 
-.is_iphone,
-.is_android {
+.is_ipad,
+.is_android,
+.is_iphone {
 
 	.module-background-light,
 	.module-background-dark {
@@ -563,9 +564,13 @@ dl.article-info {
 	float: unset !important;
 }
 
-.is_iphone .text-center #easy-social-icons ul.jssocialicons-horizontal > li {
-	float: none;
-	display: inline-block;
+.is_iphone,
+.is_ipad {
+
+	.text-center #easy-social-icons ul.jssocialicons-horizontal > li {
+		float: none;
+		display: inline-block;
+	}
 }
 
 /* Blink effect
